--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Fri Jun 30 23:33:23 CST 2017
+#Mon Aug 07 15:16:07 CST 2017
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
